// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppLayout /> should change language when language is selected 1`] = `
<div>
  <div
    class="makeStyles-root-166"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-172 mui-fixed MuiPaper-elevation4"
      style=""
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-173 MuiToolbar-gutters"
      >
        <button
          aria-label="toggle-sidebar"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-headerMenuButton-176 makeStyles-headerMenuButtonCollapse-177 MuiIconButton-colorInherit"
          tabindex="0"
          title="Toggle Sidebar"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-buttonIcon-178"
              data-testid="sidebar-open-svg"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <a
          aria-current="page"
          class="MuiTypography-root makeStyles-logotype-171 MuiTypography-h6 MuiTypography-colorInherit active"
          href="/"
        >
          <div
            class="MuiBox-root MuiBox-root-179"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <svg>
                logo.svg
              </svg>
            </svg>
          </div>
          <div
            class="MuiBox-root MuiBox-root-180"
          >
            Abacus Omega
          </div>
        </a>
        <div
          class="makeStyles-grow-174"
        />
        <button
          aria-controls="lang-menu"
          aria-haspopup="true"
          aria-label="change-language"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
          tabindex="0"
          title="Change Language"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.87 15.07l-2.54-2.51.03-.03c1.74-1.94 2.98-4.17 3.71-6.53H17V4h-7V2H8v2H1v1.99h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11.76-2.04zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2l-4.5-12zm-2.62 7l1.62-4.33L19.12 17h-3.24z"
              />
            </svg>
            <span
              class="makeStyles-language-175"
            >
              English
            </span>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="toggle-dark"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          title="Toggle Dark Mode"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              data-testid="moon-svg"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-181 makeStyles-drawerClose-183"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerClose-183 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="makeStyles-toolbar-184"
        />
        <div
          class="makeStyles-mobileBackButton-185"
        >
          <button
            aria-label="toggle-sidebar"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-headerMenuButton-176 makeStyles-headerMenuButtonCollapse-177 MuiIconButton-colorInherit"
            tabindex="0"
            title="Toggle Sidebar"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-buttonIcon-178"
                data-testid="sidebar-open-svg"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <ul
          class="MuiList-root MuiList-padding"
          data-testid="sidebar-list"
        >
          <li>
            <a
              aria-current="page"
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-186 MuiListItem-gutters MuiListItem-button Mui-selected active"
              href="/"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-188 makeStyles-linkIconActive-189"
                title="Home"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-190 makeStyles-linkTextActive-191 makeStyles-linkTextHidden-192 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Home
                </span>
              </div>
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-186 MuiListItem-gutters MuiListItem-button"
              href="/courses"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-188"
                title="Courses"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-190 makeStyles-linkTextHidden-192 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Courses
                </span>
              </div>
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-186 MuiListItem-gutters MuiListItem-button"
              href="/settings"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-188"
                title="Settings"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-190 makeStyles-linkTextHidden-192 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Settings
                </span>
              </div>
            </a>
          </li>
          <li>
            <hr
              class="MuiDivider-root makeStyles-divider-194"
              data-testid="divider"
            />
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-186 MuiListItem-gutters MuiListItem-button"
              href="/about"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-188"
                title="About"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-190 makeStyles-linkTextHidden-192 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  About
                </span>
              </div>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <main
      class="makeStyles-content-167"
    >
      <div
        class="makeStyles-appBarSpacer-169"
      />
      <div
        class="MuiContainer-root makeStyles-container-170 MuiContainer-maxWidthLg"
      >
        <div
          class="MuiBox-root MuiBox-root-195"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`<AppLayout /> should toggle light/dark mode on clicking toggle dark mode button 1`] = `
<div>
  <div
    class="makeStyles-root-61"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-142 mui-fixed MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-143 MuiToolbar-gutters"
      >
        <button
          aria-label="toggle-sidebar"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-headerMenuButton-146 makeStyles-headerMenuButtonCollapse-147 MuiIconButton-colorInherit"
          tabindex="0"
          title="Toggle Sidebar"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-buttonIcon-148"
              data-testid="sidebar-open-svg"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <a
          aria-current="page"
          class="MuiTypography-root makeStyles-logotype-141 MuiTypography-h6 MuiTypography-colorInherit active"
          href="/"
        >
          <div
            class="MuiBox-root MuiBox-root-149"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <svg>
                logo.svg
              </svg>
            </svg>
          </div>
          <div
            class="MuiBox-root MuiBox-root-150"
          >
            Abacus Omega
          </div>
        </a>
        <div
          class="makeStyles-grow-144"
        />
        <button
          aria-controls="lang-menu"
          aria-haspopup="true"
          aria-label="change-language"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
          tabindex="0"
          title="Change Language"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.87 15.07l-2.54-2.51.03-.03c1.74-1.94 2.98-4.17 3.71-6.53H17V4h-7V2H8v2H1v1.99h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11.76-2.04zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2l-4.5-12zm-2.62 7l1.62-4.33L19.12 17h-3.24z"
              />
            </svg>
            <span
              class="makeStyles-language-145"
            >
              English
            </span>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="toggle-dark"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          title="Toggle Dark Mode"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              data-testid="moon-svg"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-151 makeStyles-drawerClose-153"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerClose-153 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="makeStyles-toolbar-154"
        />
        <div
          class="makeStyles-mobileBackButton-155"
        >
          <button
            aria-label="toggle-sidebar"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-headerMenuButton-146 makeStyles-headerMenuButtonCollapse-147 MuiIconButton-colorInherit"
            tabindex="0"
            title="Toggle Sidebar"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-buttonIcon-148"
                data-testid="sidebar-open-svg"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <ul
          class="MuiList-root MuiList-padding"
          data-testid="sidebar-list"
        >
          <li>
            <a
              aria-current="page"
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-156 MuiListItem-gutters MuiListItem-button Mui-selected active"
              href="/"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-158 makeStyles-linkIconActive-159"
                title="Home"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-160 makeStyles-linkTextActive-161 makeStyles-linkTextHidden-162 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Home
                </span>
              </div>
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-156 MuiListItem-gutters MuiListItem-button"
              href="/courses"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-158"
                title="Courses"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-160 makeStyles-linkTextHidden-162 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Courses
                </span>
              </div>
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-156 MuiListItem-gutters MuiListItem-button"
              href="/settings"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-158"
                title="Settings"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-160 makeStyles-linkTextHidden-162 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Settings
                </span>
              </div>
            </a>
          </li>
          <li>
            <hr
              class="MuiDivider-root makeStyles-divider-164"
              data-testid="divider"
            />
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-156 MuiListItem-gutters MuiListItem-button"
              href="/about"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-158"
                title="About"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-160 makeStyles-linkTextHidden-162 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  About
                </span>
              </div>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <main
      class="makeStyles-content-62"
    >
      <div
        class="makeStyles-appBarSpacer-64"
      />
      <div
        class="MuiContainer-root makeStyles-container-65 MuiContainer-maxWidthLg"
      >
        <div
          class="MuiBox-root MuiBox-root-165"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`<AppLayout /> should toggle sidebar on clicking sidebar button 1`] = `
<div>
  <div
    class="makeStyles-root-31"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-37 mui-fixed MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-38 MuiToolbar-gutters"
      >
        <button
          aria-label="toggle-sidebar"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-headerMenuButton-41 makeStyles-headerMenuButtonCollapse-42 MuiIconButton-colorInherit"
          tabindex="0"
          title="Toggle Sidebar"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-buttonIcon-43"
              data-testid="sidebar-close-svg"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h13v-2H3v2zm0-5h10v-2H3v2zm0-7v2h13V6H3zm18 9.59L17.42 12 21 8.41 19.59 7l-5 5 5 5L21 15.59z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <a
          aria-current="page"
          class="MuiTypography-root makeStyles-logotype-36 MuiTypography-h6 MuiTypography-colorInherit active"
          href="/"
        >
          <div
            class="MuiBox-root MuiBox-root-44"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <svg>
                logo.svg
              </svg>
            </svg>
          </div>
          <div
            class="MuiBox-root MuiBox-root-45"
          >
            Abacus Omega
          </div>
        </a>
        <div
          class="makeStyles-grow-39"
        />
        <button
          aria-controls="lang-menu"
          aria-haspopup="true"
          aria-label="change-language"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
          tabindex="0"
          title="Change Language"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.87 15.07l-2.54-2.51.03-.03c1.74-1.94 2.98-4.17 3.71-6.53H17V4h-7V2H8v2H1v1.99h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11.76-2.04zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2l-4.5-12zm-2.62 7l1.62-4.33L19.12 17h-3.24z"
              />
            </svg>
            <span
              class="makeStyles-language-40"
            >
              English
            </span>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="toggle-dark"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          title="Toggle Dark Mode"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              data-testid="sun-svg"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-46 makeStyles-drawerOpen-47"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerOpen-47 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="makeStyles-toolbar-49"
        />
        <div
          class="makeStyles-mobileBackButton-50"
        >
          <button
            aria-label="toggle-sidebar"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-headerMenuButton-41 makeStyles-headerMenuButtonCollapse-42 MuiIconButton-colorInherit"
            tabindex="0"
            title="Toggle Sidebar"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-buttonIcon-43"
                data-testid="sidebar-close-svg"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h13v-2H3v2zm0-5h10v-2H3v2zm0-7v2h13V6H3zm18 9.59L17.42 12 21 8.41 19.59 7l-5 5 5 5L21 15.59z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <ul
          class="MuiList-root MuiList-padding"
          data-testid="sidebar-list"
        >
          <li>
            <a
              aria-current="page"
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-51 MuiListItem-gutters MuiListItem-button Mui-selected active"
              href="/"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-53 makeStyles-linkIconActive-54"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-55 makeStyles-linkTextActive-56 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Home
                </span>
              </div>
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-51 MuiListItem-gutters MuiListItem-button"
              href="/courses"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-53"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-55 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Courses
                </span>
              </div>
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-51 MuiListItem-gutters MuiListItem-button"
              href="/settings"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-53"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-55 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Settings
                </span>
              </div>
            </a>
          </li>
          <li>
            <hr
              class="MuiDivider-root makeStyles-divider-59"
              data-testid="divider"
            />
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root makeStyles-link-51 MuiListItem-gutters MuiListItem-button"
              href="/about"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemIcon-root makeStyles-linkIcon-53"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary makeStyles-linkText-55 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  About
                </span>
              </div>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <main
      class="makeStyles-content-32 makeStyles-contentShift-33"
    >
      <div
        class="makeStyles-appBarSpacer-34"
      />
      <div
        class="MuiContainer-root makeStyles-container-35 MuiContainer-maxWidthLg"
      >
        <div
          class="MuiBox-root MuiBox-root-60"
        />
      </div>
    </main>
  </div>
</div>
`;
